RESOLVED FIXED268891
Crash under RenderLayer::calculateClipRects() when going into fullscreen
https://bugs.webkit.org/show_bug.cgi?id=268891
Summary Crash under RenderLayer::calculateClipRects() when going into fullscreen
Simon Fraser (smfr)
Reported 2024-02-06 21:17:03 PST
Crash data show that there's a crash under RenderLayer::calculateClipRects() involving fullscreen.
Attachments
Simon Fraser (smfr)
Comment 1 2024-02-06 21:17:14 PST
Simon Fraser (smfr)
Comment 2 2024-02-06 21:26:26 PST
EWS
Comment 3 2024-02-08 09:07:14 PST
Committed 274290@main (1021d66fe7c3): <https://commits.webkit.org/274290@main> Reviewed commits have been landed. Closing PR #23981 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.